# data-app

./: .env  README.md  docker-compose.yml  skills-lock.json
client/web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
client/web/app/: globals.css  layout.tsx  page.tsx
client/web/app/(email)/: layout.tsx
client/web/app/(workspace)/: layout.tsx
client/web/app/create/: page.tsx
client/web/app/login/: page.tsx
client/web/components/ai-elements/: message.tsx  suggestion.tsx
client/web/components/auth/: auth-provider.tsx  login-form.tsx  password-input.tsx  protected-route.tsx
client/web/components/chat/: ai-chat.tsx
client/web/components/create/: ai-create.tsx
client/web/lib/: api.ts  browser-local-disk.ts  local-disk-provider.ts  local-disk-storage.test.mjs  local-disk-storage.ts  local-disk-utils.test.mjs  local-disk-utils.ts  tauri-local-disk.ts
client/web/src-tauri/: Cargo.toml  tauri.conf.json
client/web/src-tauri/capabilities/: default.json
client/web/src-tauri/src/: lib.rs  main.rs
server/: .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  main.py
server/app/agents/: chat_graph.py
server/app/api/: routes.py
server/app/core/: config.py
server/app/db/: mongo.py  postgres.py
server/app/models/: auth.py  chat.py  markitdown.py  skill.py
server/app/services/: auth_service.py  conversation_store.py  deepseek.py  markitdown_converter.py  skill_matcher.py  skill_store.py  user_store.py
server/tests/: test_auth_service.py  test_conversation_store.py  test_user_store.py
(+18 files in other folders)
