[package]
name = "ai-app"
version = "0.1.0"
description = "AI App desktop shell"
authors = ["AI App"]
edition = "2021"

[lib]
name = "ai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
